--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
                         position="0.058 -0.01 0.055">
                     </a-entity>
                   </a-entity>
+                  <a-entity class="windows-motion-tooltips" visible="false">
+                    <a-entity tooltip="text: Trigger to paint!; width: 0.1; height: 0.04; targetPosition: 0 -.3 -.1; lineHorizontalAlign: center; lineVerticalAlign: bottom; src: assets/images/tooltip.png"
+                              position="0 -.1 -.2"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Main menu; width: 0.07; height: 0.03; targetPosition: 0.01 0.0025 -.06; lineHorizontalAlign: right; src: assets/images/tooltip.png"
+                              position="-0.1 0.02 -.05"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Brush size\n(up/down); width: 0.11; height: 0.04; targetPosition: 0 -.09 -.1; lineHorizontalAlign: left; src: assets/images/tooltip.png"
+                              position="0.14 0 -.1"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Press to undo; width: 0.11; height: 0.03; targetPosition: 0 0 0; lineHorizontalAlign: left; src: assets/images/tooltip.png"
+                              position="0.11 0 0"
+                              rotation="-90 0 0">
+                    </a-entity>
+                </a-entity>
                 </a-entity>
       <a-entity id="right-hand"
                 brush
@@ -127,6 +145,24 @@
                     </a-entity>
                     <a-entity tooltip="text: Undo; width: 0.05; height: 0.03; targetPosition: -0.005 -0.022 0.027; rotation: -90 0 0; lineHorizontalAlign: right; src: assets/images/tooltip.png"
                         position="-0.058 -0.01 0.055">
+                    </a-entity>
+                  </a-entity>
+                  <a-entity class="windows-motion-tooltips" visible="false">
+                    <a-entity tooltip="text: Trigger to paint!; width: 0.1; height: 0.04; targetPosition: 0 -.3 -.1; lineHorizontalAlign: center; lineVerticalAlign: bottom; src: assets/images/tooltip.png"
+                              position="0 -.1 -.2"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Main menu; width: 0.07; height: 0.03; targetPosition: -.015 0.0025 -.06; lineHorizontalAlign: left; src: assets/images/tooltip.png"
+                              position="0.1 0.02 -.05"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Brush size\n(up/down); width: 0.11; height: 0.04; targetPosition: 0 -.09 -.1; lineHorizontalAlign: right; src: assets/images/tooltip.png"
+                              position="-0.14 0 -.1"
+                              rotation="-90 0 0">
+                    </a-entity>
+                    <a-entity tooltip="text: Press to undo; width: 0.11; height: 0.03; targetPosition: 0 0 0; lineHorizontalAlign: right; src: assets/images/tooltip.png"
+                              position="-0.11 0 0"
+                              rotation="-90 0 0">
                     </a-entity>
                   </a-entity>
       </a-entity>
