--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <a-scene>
+    <a-scene stats="">
       <a-assets>
         <img id="skymap" src="assets/images/sky.jpg" crossorigin="anonymous">
         <img id="uinormal" src="assets/images/ui-normal.png" crossorigin="anonymous">
