--- a/index.html
+++ b/index.html
@@ -43,19 +43,18 @@
       <a-light type="point" light="color: #fff; intensity:0.6" position="3 10 1"></a-light>
       <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
       <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
-      <a-entity id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity>
-      <!--geometry="primitive: circle; radius: 12;"
-      rotation="-90 0 0"-->
-      <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
-      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
-
+      <a-entity visible="false" id="logo" obj-model="obj: #logoobj; mtl: #logomtl"></a-entity>
       <a-entity id="ground"
                 geometry="primitive: box; width: 12; height: 0.01; depth: 12"
                 material="shader: flat; src: #floor">
-              </a-entity>
+      </a-entity>
+      <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
+
+      <a-entity id="hitEntityLeft" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
+      <a-entity id="hitEntityRight" material="shader:flat; color: #ff3468" obj-model="obj: #hitEntityObj"></a-entity>
       <a-entity id="cameraRig">
         <!-- camera -->
-        <a-entity id="acamera" camera look-controls orbit-controls></a-entity>
+        <a-entity id="acamera" camera wasd-controls look-controls orbit-controls></a-entity>
         <!-- hand controls -->
         <a-entity id="left-hand"
                   brush
@@ -178,7 +177,6 @@
                     </a-entity>
         </a-entity>
       </a-entity>
-      <a-entity id="sky" geometry="primitive:sphere; radius:30; phiLength:360; phiStart:0; thetaLength:90" material="shader:flat; side:back; height:2048; src:#skymap; width:2048"></a-entity>
     </a-scene>
     <a href="https://aframe.io/a-painter/"><div id="apainter-logo" class="hidden"></div><div id="apainter-author" style="display:none" class="hidden">authorname</div></a>
     <div id="apainter-ui">
