--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     </script>
     <script src="https://ucarecdn.com/widget/2.5.5/uploadcare/uploadcare.full.min.js"></script>
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
-    <!--<script src="vendor/aframe-v0.7.0.min.js"></script>-->
     <script src="vendor/aframe-master.min.js"></script>
     <script src="vendor/aframe-input-mapping-component.js"></script>
     <script src="build.js"></script>
@@ -25,7 +24,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <a-scene stats="">
+    <a-scene>
       <a-assets>
         <img id="skymap" src="assets/images/sky.jpg" crossorigin="anonymous">
         <img id="uinormal" src="assets/images/ui-normal.png" crossorigin="anonymous">
