--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a-light type="point" light="color: #fff; intensity:0.2" position="-3 -10 0"></a-light>
       <a-light type="hemisphere" groundColor="#888" intensity="0.8"></a-light>
       <a-entity id="logo" logo-model
-                animation="dur: 4000; property: logo-model.opacity; from: 1; to: 0; startEvents: started-painting"></a-entity>
+                animation="dur: 4000; property: logo-model.opacity; from: 1; to: 0; startEvents: painting-started"></a-entity>
       <a-entity id="ground"
                 geometry="primitive: box; width: 12; height: 0.01; depth: 12"
                 material="shader: flat; src: #floor">
