Fix scene too dark

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <a-scene vr-analytics>
+    <a-scene vr-analytics renderer="colorManagement: true">
       <a-assets>
         <img id="skymap" src="assets/images/sky.jpg" crossorigin="anonymous">
         <img id="uinormal" src="assets/images/ui-normal.png" crossorigin="anonymous">
